--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
-    "@vue/composition-api": "^1.6.2",
-    "@vuelidate/core": "^2.0.0-alpha.41",
-    "@vuelidate/validators": "^2.0.0-alpha.29",
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
-    "express-jwt": "^7.7.5",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -31,10 +23,14 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.3",
+    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2"
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "prettier": "^2.5.1"
   }
 }
