--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "core-js": "^3.19.3",
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.15.8",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
