--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
+  "multiCommand.commands": [
+    {
+      "command": "multiCommand.gitSync",
+      "sequence": [
+        "workbench.action.files.saveAll",
+        "git.stageAll",
+        "git.commitStaged",
+        "git.sync"
+      ]
+    }
+  ],
+  "shortcuts.buttons": ["triangle-up , multiCommand.gitSync , Git Sync"],
   "editor.formatOnSave": true,
   "cSpell.words": ["Vuelidate"]
 }
