--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "ipp": "^2.0.1",
+    "ipp-printer": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.15.8",
+    "pdfkit": "^0.13.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
