--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@sealsystems/ipp": "^2.7.7",
     "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "ipp": "^2.0.1",
-    "ipp-printer": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.15.8",
     "pdfkit": "^0.13.0",
