--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
     "nuxt": "^2.15.8",
     "pdfkit": "^0.13.0",
     "uuid": "^8.3.2",
