--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sysprint-js",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
