--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "sysprint-js",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "settings": "./src/Shell/settings.sh"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nuxt": "^2.15.8",
+    "nuxt-highcharts": "^2.0.4",
     "pdfkit": "^0.13.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
