--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@sealsystems/ipp": "^2.7.7",
+    "ag-grid-community": "^28.0.2",
+    "ag-grid-vue": "^28.0.0",
     "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.11.2",
@@ -22,6 +24,9 @@
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
     "pdfkit": "^0.13.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -38,6 +43,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "sequelize-cli": "^6.4.1"
   }
 }
