--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "gdb": "npx prisma migrate reset && npx prisma migrate dev --name create_db",
     "settings": "./src/Shell/settings.sh"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@prisma/client": "^4.1.1",
     "@sealsystems/ipp": "^2.7.7",
     "ag-grid-community": "^28.0.2",
     "ag-grid-vue": "^28.0.0",
@@ -20,13 +22,9 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0",
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
     "pdfkit": "^0.13.0",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -44,6 +42,6 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
-    "sequelize-cli": "^6.4.1"
+    "prisma": "^4.1.1"
   }
 }
