--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "gdb": "npx prisma migrate reset && npx prisma migrate dev --name create_db",
-    "settings": "./src/Shell/settings.sh"
+    "settings": "./src/shell/settings.sh"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
