Changes to be committed: 	new file:   Dockerfile 	modified:   api/index.js 	new file:   docker-compose.yml 	modified:   package.json 	new file:   shell/cups/config/cupsd.conf 	new file:   shell/init.sh 	modified:   src/components/ipp/ipp.js 	modified:   src/controllers/printers.controller.js

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "sysprint-js",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "gdb": "npx prisma migrate reset && npx prisma migrate dev --name create_db",
-    "settings": "./src/shell/settings.sh"
+    "settings": "./shell/init.sh"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
