--- a/shell/cupsd.conf
+++ b/shell/cupsd.conf
@@ -1,48 +1,27 @@
 MaxLogSize 0
 PageLogFormat {"print": "%p","user": "%u","job": "%j","time": "%T","pages": "%P","copies": "%C","job-billing": "%{job-billing}","job-originating-host-name": "%{job-originating-host-name}","job-name":"%{job-name}","media": "%{media}","sides": "%{sides}"}
-#
-# "$Id: cupsd.conf.in 7888 2008-08-29 21:16:56Z mike $"
-#
-# Sample configuration file for the CUPS scheduler.  See "man cupsd.conf" for a
-# complete description of this file.
-#
-
-# Log general information in error_log - change "warn" to "debug"
-# for troubleshooting...
 LogLevel warn
-
-# Only listen for connections from the local machine.
-#Listen localhost:631
+Listen 0.0.0.0:631
 Port 631
-Listen /var/run/cups/cups.sock
-
-
-# Show shared printers on the local network.
 Browsing On
 BrowseOrder allow,deny
 BrowseAllow all
 BrowseRemoteProtocols CUPS
 BrowseLocalProtocols dnssd
-
-# Default authentication type, when authentication is required...
 DefaultAuthType Basic
-
-# Web interface setting...
+DefaultEncryption Never
 WebInterface Yes
+ServerAlias *
 
 # Restrict access to the server...
 <Location />
   Order allow,deny
-  #Allow @LOCAL
-  #Allow 10.11.0.0/16
   Allow all
 </Location>
 
 # Restrict access to the admin pages...
 <Location /admin>
   Order allow,deny
-  #Allow @LOCAL
-  #Allow 10.11.0.0/16
   Allow all
 </Location>
 
@@ -51,16 +30,14 @@ WebInterface Yes
   AuthType Default
   Require user @SYSTEM
   Order allow,deny
-  #Allow @LOCAL
-  #Allow 10.11.0.0/16
   Allow all
 </Location>
 
 # Set the default printer/job policies...
 <Policy default>
   # Job/subscription privacy...
-  JobPrivateAccess default
-  JobPrivateValues default
+  JobPrivateAccess all
+  JobPrivateValues none
   SubscriptionPrivateAccess default
   SubscriptionPrivateValues default
 
@@ -144,7 +121,3 @@ WebInterface Yes
     Order deny,allow
   </Limit>
 </Policy>
-
-#
-# End of "$Id: cupsd.conf.in 7888 2008-08-29 21:16:56Z mike $".
-#
