--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "gdb": "npx prisma migrate reset && npx prisma migrate dev --name create_db",
@@ -36,7 +36,6 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
-    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
