--- a/.env.demo
+++ b/.env.demo
@@ -1,3 +1,4 @@
 CUPS_URL=http://localhost:631
 API_SECRETE=secret
 DATABASE_URL="postgresql://user:pass@localhost:5432/sysprint?schema=public"
+PORT=80
