--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "micro-emitter": "^1.2.6",
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
-    "pdfkit": "^0.13.0",
+    "nuxt-socket-io": "^2.0.3",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "ws": "^8.11.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
