--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@nuxtjs/axios": "^5.13.6",
     "@prisma/client": "^4.1.1",
     "@sealsystems/ipp": "^2.7.7",
-    "ag-grid-community": "^28.0.2",
-    "ag-grid-vue": "^28.0.0",
     "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.11.2",
@@ -21,10 +19,8 @@
     "express-fileupload": "^1.4.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "micro-emitter": "^1.2.6",
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
-    "nuxt-socket-io": "^2.0.3",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "uuid": "^8.3.2",
@@ -32,8 +28,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0",
-    "ws": "^8.11.0"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
@@ -45,5 +40,10 @@
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
     "prisma": "^4.7.1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "server/emitter/socket.js"
+    ]
   }
 }
