--- a/config/cupsd.conf
+++ b/config/cupsd.conf
@@ -2,7 +2,8 @@ MaxLogSize 0
 MaxLogFiles 7
 LogTimeFormat "%Y-%m-%d %H:%M:%S"
 PreserveJobFiles No
-PageLogFormat {"print": "%p","user": "%u","job": "%j","time": "%T","pages": "%C","copies": "1","job-billing": "%{job-billing}","job-originating-host-name": "%{job-originating-host-name}","job-name":"%{job-name}","media": "%{media}","sides": "%{sides}"}
+PageLogFormat {"print": "%p","user": "%u","job": "%j","time": "%T","pages": "%C","copies": "1","job-billing": "%{job-billing}","job-originating-host-name": "%{job-originating-host-name}","job-name":"%{job-name}","media": "%{media}","sides": "%{sides}","status": "%{job-state}"}
+
 LogLevel warn
 Port 631
 Browsing On
