--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,10 @@
     "@types/activedirectory2": "^1.2.3",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/ipp": "^2.0.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.22",
+    "ipp": "^2.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
