--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.6.8",
     "quasar": "^2.6.0",
     "socket.io-client": "^4.7.4",
     "vue": "^3.0.0",
