--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "activedirectory2": "^2.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.1",
     "vue": "^3.4.20"
   },
