--- a/server/package.json
+++ b/server/package.json
@@ -11,18 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "activedirectory2": "^2.1.0",
+    "activedirectory2": "^2.2.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.1",
     "vue": "^3.4.20"
   },
   "devDependencies": {
-    "@types/activedirectory2": "^1.2.3",
+    "@types/activedirectory2": "^1.2.6",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/ipp": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.11.22",
     "ipp": "^2.0.1",
