--- a/sysprint-client/package.json
+++ b/sysprint-client/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "./dev",
+    "start": "./start",
     "build": "quasar build",
     "postinstall": "quasar prepare"
   },
