--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     image: nginx:latest
     container_name: nginx
     user: root
+    cap_add:
+      - NET_BIND_SERVICE
     ports:
       - "80:80"
     volumes:
